Fixed overflow bug

--- a/M3_Making_Websites_Interactive/M3.9_Solo_Project_3/stylesheet.css
+++ b/M3_Making_Websites_Interactive/M3.9_Solo_Project_3/stylesheet.css
@@ -17,6 +17,7 @@ body {
   padding-bottom: 30px;
   margin-top: 50px;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 /* INPUT SECTION */
@@ -28,8 +29,6 @@ body {
   align-items: center;
   height: 250px;
   background-color: #6943FF;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
 }
 
 #input-area {
